--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 			width: 50px;
 			height: 50px;
 			border-radius: 50%;
-			border: 2px solid #222222;
+			border: 1px solid #d0d0d0;
+			text-align: center;
+			line-height: 50px;
+			user-select: none;
+			cursor: pointer;
 		}
 	</style>
 </head>
