--- a/index.html
+++ b/index.html
@@ -17,16 +17,26 @@
 			height: 100%;
 			position: relative;
 		}
-		.node {
+		.graph > div {
 			position: absolute;
+		}
+		.node {
 			width: 50px;
 			height: 50px;
+			background: #fff;
 			border-radius: 50%;
 			border: 1px solid #d0d0d0;
 			text-align: center;
 			line-height: 50px;
 			user-select: none;
 			cursor: pointer;
+			z-index: 10;
+		}
+		.line {
+			background: #d0d0d0;
+			height: 1px;
+			transform-origin: 0 0;
+			z-index: 9;
 		}
 	</style>
 </head>
