--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
 			position: absolute;
 		}
 		.node {
-			color: #fff;
+			color: #FFFFFF;
 			width: 50px;
 			height: 50px;
-			background: #009688;
 			border-radius: 50%;
 			text-align: center;
 			line-height: 50px;
@@ -34,13 +33,13 @@
 			cursor: pointer;
 			z-index: 10;
 			transition: box-shadow 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
-			box-shadow: rgba(0, 0, 0, 0.156863) 0px 3px 10px, rgba(0, 0, 0, 0.227451) 0px 3px 10px
+			box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
 		}
 		.node_dragging {
 			box-shadow: rgba(0, 0, 0, 0.186863) 0px 10px 30px, rgba(0, 0, 0, 0.227451) 0px 6px 10px
 		}
 		.line {
-			background: #d0d0d0;
+			background: #BDBDBD;
 			height: 1px;
 			transform-origin: 0 0;
 			z-index: 9;
