--- a/index.html
+++ b/index.html
@@ -2,51 +2,19 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ES6</title>
+	<title>Tree Graph</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<style>
-		html, body {
-			height: 100%;
-			position: relative;
-			margin: 0;
-			padding: 0;
-			font-family: 'Roboto', sans-serif;
-		}
-		#app {
-			height: 100%;
-		}
-		.graph {
-			height: 100%;
-			position: relative;
-		}
-		.graph > div {
-			position: absolute;
-		}
-		.node {
-			color: #FFFFFF;
-			width: 50px;
-			height: 50px;
-			border-radius: 50%;
-			text-align: center;
-			line-height: 50px;
-			user-select: none;
-			cursor: pointer;
-			z-index: 10;
-			transition: box-shadow 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
-			box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
-		}
-		.node_dragging {
-			box-shadow: rgba(0, 0, 0, 0.186863) 0px 10px 30px, rgba(0, 0, 0, 0.227451) 0px 6px 10px
-		}
-		.line {
-			background: #BDBDBD;
-			height: 1px;
-			transform-origin: 0 0;
-			z-index: 9;
-		}
-	</style>
+	<link href="styles.css" rel="stylesheet">
 </head>
 <body>
+	<div class="header">
+		<h1>Tree Graph</h1>
+		<div class="info">
+			Press ALT + MOUSE LEFT for CREATE new node. <br/>
+			Press CTRL + MOUSE LEFT for HARD DELETE node. <br/>
+			Press SHIFT + MOUSE LEFT for SOFT DELETE node.
+		</div>
+	</div>
 	<div id="app"></div>
 	<script src="/static/bundle.js"></script>
 </body>
