--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Tree Graph</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<link href="styles.css" rel="stylesheet">
+	<link href="build/styles.css" rel="stylesheet">
 </head>
 <body>
 	<div class="header">
@@ -16,6 +16,6 @@
 		</div>
 	</div>
 	<div id="app"></div>
-	<script src="/static/bundle.js"></script>
+	<script src="build/bundle.js"></script>
 </body>
 </html>
